// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenstaxMetadataForm Book inputs correctly modifies inputs 1`] = `
{
  "assignment-type": "",
  "blooms": "1",
  "books": {
    "stax-nutrition": {
      "aacn": "not-modified-0",
    },
    "stax-pharmacology": {
      "aacn": "modified",
    },
    "stax-pophealth": {
      "aacn": "not-modified-1",
    },
  },
  "dok-tag": "",
  "is-solution-public": "true",
  "module-id": [],
  "nickname": "test",
  "time": "",
}
`;

exports[`OpenstaxMetadataForm Book inputs correctly modifies inputs in a set 1`] = `
{
  "assignment-type": "",
  "blooms": "1",
  "books": {
    "stax-amfg": {},
    "stax-anything": {
      "lo": [
        "not-modified-4",
      ],
    },
    "stax-psy": {
      "lo": [
        "not-modified-2",
        "stax-psy.lo[1]",
        "not-modified-3",
      ],
    },
  },
  "dok-tag": "",
  "is-solution-public": "true",
  "module-id": [],
  "nickname": "test",
  "time": "",
}
`;

exports[`OpenstaxMetadataForm Book inputs handleBookChange keeps input values when they exist on the new book 1`] = `
{
  "assignment-type": "",
  "blooms": "1",
  "books": {
    "stax-psy": {
      "lo": [
        "test-keep-state-on-stax-psy",
      ],
    },
    "stax-usgovt": {
      "lo": [
        "test-carry-state-to-stax-usgovt",
      ],
    },
  },
  "dok-tag": "",
  "is-solution-public": "true",
  "module-id": [],
  "nickname": "test",
  "time": "",
}
`;

exports[`OpenstaxMetadataForm Form validation does not save when information is missing 1`] = `
[
  [
    "OpenStax Metadata: "blooms" cannot be empty.",
  ],
]
`;

exports[`OpenstaxMetadataForm Form validation does not save when information is missing 2`] = `
[
  [
    "OpenStax Metadata: "nickname" cannot be empty.",
  ],
]
`;

exports[`OpenstaxMetadataForm encode/decode form state decodes form state when loading and encodes when saving 1`] = `
{
  "aacn": [],
  "ap-lo": [
    {
      "book": "stax-apbio",
      "isValid": true,
      "value": "ABC.0.F",
    },
  ],
  "blooms": {
    "isValid": true,
    "value": "1",
  },
  "books": [
    {
      "isValid": true,
      "value": "stax-psy",
    },
    {
      "isValid": true,
      "value": "stax-apbio",
    },
  ],
  "hts": [],
  "lo": [
    {
      "book": "stax-psy",
      "isValid": true,
      "value": "00-00-01",
    },
  ],
  "module-id": [
    {
      "isValid": true,
      "value": "m000001",
    },
    {
      "isValid": true,
      "value": "m000002",
    },
    {
      "isValid": true,
      "value": "m000003#term-03",
    },
  ],
  "nclex": [],
  "nickname": {
    "isValid": true,
    "value": "test",
  },
  "rp": [],
  "science-practice": [
    {
      "book": "stax-apbio",
      "isValid": true,
      "value": "concept-explanation",
    },
  ],
}
`;

exports[`OpenstaxMetadataForm encode/decode form state decodes form state when loading and encodes when saving 2`] = `
[
  [
    undefined,
    {
      "assignment-type": "",
      "blooms": "1",
      "books": {
        "stax-apbio": {
          "ap-lo": [
            "ABC.0.F",
          ],
          "science-practice": "concept-explanation",
        },
        "stax-psy": {
          "lo": [
            "00-00-01",
          ],
        },
      },
      "dok-tag": "",
      "is-solution-public": "true",
      "module-id": [
        {
          "element-id": "",
          "module": "modules/m000001/index.cnxml",
        },
        {
          "element-id": "",
          "module": "modules/m000002/index.cnxml",
        },
        {
          "element-id": "term-03",
          "module": "modules/m000003/index.cnxml",
        },
      ],
      "nickname": "test",
      "time": "",
    },
  ],
]
`;
